<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.hw4.MainScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/LatP1"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/enter_latp1"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textSize="14sp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/LonP1"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignBaseline="@+id/LatP1"
        android:layout_alignBottom="@+id/LatP1"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/enter_lonp1"
        android:inputType="numberDecimal|numberSigned"
        android:selectAllOnFocus="false"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/LatP1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/LonP2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/LonP1"
        android:layout_below="@+id/LonP1"
        android:ems="10"
        android:hint="@string/enter_lonp2"
        android:inputType="numberDecimal|numberSigned"
        android:selectAllOnFocus="false"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/LonP1"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <EditText
        android:id="@+id/LatP2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/LatP1"
        android:layout_below="@+id/LatP1"
        android:ems="10"
        android:hint="@string/enter_latp2"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textSize="14sp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LatP1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LatP2"
        android:layout_below="@+id/LonP2"
        android:text="@string/calc_button"
        android:background="@color/yellow"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/LonP1"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/LonP1" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CalculateButton"
        android:layout_alignBottom="@+id/CalculateButton"
        android:layout_toEndOf="@+id/CalculateButton"
        android:text="@string/clear_button"
        android:background="@color/yellow"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/LonP2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/LonP2" />

    <TextView
        android:id="@+id/DistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/CalculateButton"
        android:layout_below="@+id/CalculateButton"
        android:text="Distance: "
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/CalculateButton" />

    <TextView
        android:id="@+id/BearingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/DistanceLabel"
        android:layout_below="@+id/DistanceLabel"
        android:text="Bearing: "
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DistanceLabel"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/DistanceLabel" />

    <android.support.constraint.Guideline
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
